# drop

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT.MD  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: entrypoint.sh
frontend/: index.html
migrations/: env.py
migrations/versions/: c0e1bff1619e_create_drops_table.py  d1e2f3a4b5c6_create_outbox_events_table.py
nginx/: nginx.conf
scripts/: expiration_test.py  race_test.py
src/drop/: config.py  logging.py  main.py  metrics.py
src/drop/api/: dependencies.py  errors.py  health.py  middleware.py  rate_limit.py
src/drop/api/routes/: drops.py  metrics.py
src/drop/application/: schemas.py
src/drop/application/services/: cleanup.py  drop.py  outbox.py
src/drop/domain/: exceptions.py  public_id.py  sanitization.py
src/drop/infrastructure/: redis.py
src/drop/infrastructure/database/: engine.py  models.py
src/drop/infrastructure/repositories/: drop.py  outbox.py
src/drop/infrastructure/storage/: s3.py
src/drop/workers/: celery_app.py  tasks.py
tests/: test_api_responses.py  test_health.py  test_logging.py  test_metrics.py  test_rate_limit.py
tests/integration/: conftest.py  factories.py  test_alembic_migrations.py  test_celery_tasks.py  test_cleanup.py  test_download_concurrency.py  test_expiration.py  test_failure_scenarios.py  test_outbox.py  test_s3_storage.py  test_upload_restrictions.py
