[project]
name = "drop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MickeyShide", email = "mickey_shide@list.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.2",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
drop = "drop:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
