[project]
name = "drop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MickeyShide", email = "mickey_shide@list.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.54",
    "celery>=5.6.3",
    "fastapi[standard]>=0.139.2",
    "httpx2>=2.9.0",
    "pydantic-settings>=2.14.2",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
drop = "drop:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.43.54",
    "botocore-stubs>=1.43.14",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "testcontainers[postgres]>=4.14.2",
]
